--- a/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8mq.dtsi
@@ -617,10 +617,10 @@
 		status = "disabled";
 	};
 
-	// display-subsystem {
-	// 	compatible = "fsl,imx-display-subsystem";
-	// 	ports = <&dcss_port>;
-	// };
+	display-subsystem {
+		compatible = "fsl,imx-display-subsystem";
+		ports = <&dcss_port>;
+	};
 
 	mipi_dsi_phy: dsi_phy@30A00300 {
 		#address-cells = <1>;
